	  command.  New function parse_include(); changes to
	  parse_rcfile(), do_nanorc(), nanorc.5, and nanorc.sample.
	  (Victor Ananievsky, Brand Huntsman and DLR)
	- Change references to the "help menu" to the "help text
	  display" refer to display, for clarity.  Changes to
	  shortcut_init(), configure.ac, and faq.html. (DLR, suggested
	  by Benno Schulenberg)
- files.c:
  open_file()
	- Remove redundant wording in the error message when we try to
	  open a device file. (DLR)
  safe_tempfile()
	- Don't ignore $TMPDIR if it's set but blank, for consistency.
	  (DLR)
  write_file()
	- Don't free backupname before displaying it in a statusbar error
	  message. (DLR, found by Bill Marcum)
	- If we can't save the backup file for some reason, at least
	  save the original file, if possible, since that's better than
	  saving nothing. (DLR, problem found by Bill Marcum, solution
	  suggested by Jordi)
	- Clarify the error message when writing a temporary file for
	  prepending fails. (DLR)
	- Simplify the routine for closing the file just before we
	  indicate success on the statusbar. (DLR)
  global.c:
  shortcut_init()
	- Change the cursor position display help text to use "display"
	  instead of "show", for consistency. (DLR)
- rcfile.c:
  parse_argument()
	- Rename variable ptr_bak to ptr_save, for consistency. (DLR)
  parse_syntax()
	- Properly generate an error if we've read in a previous syntax
	  without any associated color commands. (DLR)
	- Don't generate an error if we find a duplicate syntax name,
	  since we might be trying to override a syntax in the global
	  nanorc with one in our local nanorc.  Instead, free any
	  duplicate syntaxes we find, so that we always use the last
	  syntax with a given name. (DLR)
  parse_colors()
	- Check for a color command's not following a syntax line before
	  anything else. (DLR)
  do_rcfile()
	- Check for the rcfile's being a directory or device file and
	  reject it if it is, for consistency with file handling